src/BootstrapBlazor.Shared/wwwroot/css/site.css
/* ... */
    .install-prompt-body .installButton {
        margin-left: auto;
        width: 4em;
    }

    .install-prompt-body .cancelButton {
        margin-left: 0.3rem;
        width: 4em;
    }

.culture-selector {
    display: flex;
    align-items: center;
}

    .culture-selector label {
        margin: 0;
        color: rgba(255,255,255,.5);
    }

    .culture-selector .form-select {
        width: 210px;
    }

.layout-drawer {
    padding: 13px;
    margin-right: -1rem;
    cursor: pointer;
}

    .layout-drawer:hover {
        background-color: #1893a7;
    }

.layout-drawer-body {
    padding: 1rem;
}

.layout-item {
    cursor: pointer;
    border: 2px solid #e9ecef;
    padding: 4px;
    border-radius: 4px;
    height: 80px;
    width: 120px;
    transition: border .3s linear;
}

    .layout-item:hover,
    .layout-item.active {
        border: 2px solid #28a745;
    }

    .layout-item .layout-left {
        width: 30%;
    }

        .layout-item .layout-left .layout-left-header {
            height: 16px;
            background-color: #367fa9;
        }

        .layout-item .layout-left .layout-left-body,
        .layout-item .layout-body .layout-left {
            background-color: #2f4050;
        }

    .layout-item .layout-right .layout-right-header,
    .layout-item .layout-top {
        background-color: #17a2b8;
        height: 16px;
    }

    .layout-item .layout-right .layout-right-footer,
    .layout-item .layout-footer {
        background-color: #5b6e84;
        height: 12px;
    }

    .layout-item .layout-top,
    .layout-item .layout-body,
    .layout-item .layout-footer {
        width: 100%;
    }

.color {
    width: 1.5rem;
    height: 1.5rem;
    display: block;
    cursor: pointer;
    border: 2px solid #e9ecef;
    border-radius: 4px;
    transition: border .3s linear;
}

    .color:hover {
        border: 2px solid #28a745;
    }

.color1 {
    background-color: #409eff;
}

.color2 {
    background-color: #28a745;
}

.color3 {
    background-color: #e83e8c;
}

.color4 {
    background-color: #ffe484;
}

.color5 {
    background-color: #17a2b8;
}

.color6 {
    background-color: #4a3275;
}

.color1,
.layout.is-page.color1 .layout-header {
    background-color: #409eff;
}

.layout.is-page.color1 .layout-side .layout-banner {
    background-color: #3e84d0
}

.layout.is-page.color1 .layout-side {
    background-color: #212529;
    color: #ebeef5;
}

.layout.is-page.color1 .layout-footer {
    background-color: #343a40;
}

.layout.is-page.color1 .layout-header-bar {
    background-color: #2b7cd0;
    border-color: #014186;
}

.layout.is-page.color1 .layout-drawer:hover {
    background-color: #3184dc;
}

.color2,
.layout.is-page.color2 .layout-header {
    background-color: #28a745;
}

.layout.is-page.color2 .layout-side .layout-banner {
    background-color: #24903d
}

.layout.is-page.color2 .layout-side {
    background-color: #212529;
    color: #ebeef5;
}

.layout.is-page.color2 .layout-footer {
    background-color: #343a40;
}

.layout.is-page.color2 .layout-header-bar {
    background-color: #258c3c;
    border-color: #014186;
}

.layout.is-page.color2 .layout-drawer:hover {
    background-color: #24903d;
}

.color3,
.layout.is-page.color3 .layout-header {
    background-color: #e83e8c;
}

.layout.is-page.color3 .layout-side .layout-banner {
    background-color: #c5417e
}

.layout.is-page.color3 .layout-side {
    background-color: #212529;
    color: #ebeef5;
}

.layout.is-page.color3 .layout-footer {
    background-color: #343a40;
}

.layout.is-page.color3 .layout-header-bar {
    background-color: #c73477;
    border-color: #014186;
}

.layout.is-page.color3 .layout-drawer:hover {
    background-color: #c5417e;
}

.color4,
.layout.is-page.color4 .layout-header {
    background-color: #ffc107;
}

.layout.is-page.color4 .layout-side .layout-banner {
    background-color: #e4af10
}

.layout.is-page.color4 .layout-side {
    background-color: #212529;
    color: #ebeef5;
}

.layout.is-page.color4 .layout-footer {
    background-color: #343a40;
}

.layout.is-page.color4 .layout-header-bar {
    background-color: #e2b221;
    border-color: #014186;
}

.layout.is-page.color4 .layout-drawer:hover {
    background-color: #e4af10;
}

.color5,
.layout.is-page.color5 .layout-header {
    background-color: #17a2b8;
}

.color6,
.layout.is-page.color6 .layout-header {
    background-color: #6610f2;
}

.layout.is-page.color6 .layout-side .layout-banner {
    background-color: #4b0cb3
}

.layout.is-page.color6 .layout-side {
    background-color: #212529;
    color: #ebeef5;
}

.layout.is-page.color6 .layout-footer {
    background-color: #343a40;
}

.layout.is-page.color6 .layout-header-bar {
    background-color: #4b0ab5;
    border-color: #014186;
}

.layout.is-page.color6 .layout-drawer:hover {
    background-color: #4b0cb3;
}

.layout.is-page .layout-right,
.layout-is-page .layout-main {
    background-color: #fff;
}

.widget .dropdown-body h3 {
    color: #666666;
    font-size: 14px;
    margin-bottom: 10px;
}

.widget .dropdown-body h4 {
    color: #444444;
    font-size: 15px;
    margin: 0;
}

.widget .dropdown-body small {
    color: #999999;
    font-size: 10px;
    position: absolute;
    top: 0;
    right: 0;
}

.widget .dropdown-item > div:not(.progress):last-child {
    width: calc(100% - 40px);
}

.widget .dropdown-item {
    padding: 0.5rem 1rem;
}

.widget .progress {
    height: 7px;
}

.widget .dropdown-item.active,
.widget .dropdown-item:active {
    color: inherit;
}

.widget .dropdown-item:not(:nth-of-type(odd)):active {
    background-color: inherit;
}

.ms-learn {
    position: fixed;
    bottom: 4rem;
    background: #fff;
    box-shadow: 0 0 12px #211b50;
    overflow: hidden;
    border-radius: 5px;
    right: 1rem;
    z-index: 2000;
    width: 258.5px;
}
/* ... */

